The new variable 'comment-use-syntax-ppss' can be set to nil to recover
the old behavior if needed.
This also means that there is no longer any need to precede opening
brackets at the start of a line inside documentation strings with a
backslash, although there is no harm in doing so to make the code
easier to edit with an older Emacs version.

---
** The 'server-name' and 'server-socket-dir' variables are set when a
socket has been passed to Emacs.

---
** The 'file-system-info' function is now available on all platforms.
instead of just Microsoft platforms.  This fixes a 'get-free-disk-space'
bug on OS X 10.8 and later.

---
** The function 'get-free-disk-space' returns now a non-nil value for
remote systems, which support this check.

+++
** 'memory-limit' now returns a better estimate of memory consumption.

+++
** When interpreting 'gc-cons-percentage', Emacs now estimates the
heap size more often and (we hope) more accurately.  E.g., formerly
'(progn (let ((gc-cons-percentage 0.8)) BODY1) BODY2)' continued to use
the 0.8 value during BODY2 until the next garbage collection, but that
is no longer true.  Applications may need to re-tune their GC tricks.

+++
** New macro 'combine-change-calls' arranges to call the change hooks
('before-change-functions' and 'after-change-functions') just once
each around a sequence of lisp forms, given a region.  This is
useful when a function makes a possibly large number of repetitive
changes and the change hooks are time consuming.

+++
** 'eql', 'make-hash-table', etc. now treat NaNs consistently.
Formerly, some of these functions ignored signs and significands of
NaNs.  Now, all these functions treat NaN signs and significands as
significant.  For example, '(eql 0.0e+NaN -0.0e+NaN)' now returns nil
because the two NaNs have different signs; formerly it returned t.
Also, Emacs now reads and prints NaN significands; e.g., if X is a
NaN, '(format "%s" X)' now returns "0.0e+NaN", "1.0e+NaN", etc.,
depending on X's significand.